[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/scribbles.ttf" type="FontFile" id=1]
[ext_resource path="res://raw_assets/textures/sawblade.png" type="Texture2D" id=2]
[ext_resource path="res://gameobjects/sawblade.gd" type="Script" id=3]
[ext_resource path="res://tools/3DTextViewport.gd" type="Script" id=4]

[sub_resource type="BoxShape3D" id=1]
extents = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="FontFile" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=5]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("SubViewport")

[node name="sawblade" type="Node3D"]
script = ExtResource( 3 )
instructions = "use the sawblade to cut your ectoplasm on it and become mortal again"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.25, 0 )
layers = 4
texture = ExtResource( 2 )

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2( 970, 140 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport"]
offset_right = 970.0
offset_bottom = 140.0

[node name="RoleLabel" type="Label" parent="SubViewport/VBoxContainer"]
offset_right = 970.0
offset_bottom = 35.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 0, 0.960784, 1 )
theme_override_fonts/font = SubResource( 3 )
text = "Essence of a Role"
align = 1
valign = 1

[node name="InstrucLabel" type="Label" parent="SubViewport/VBoxContainer"]
offset_top = 39.0
offset_right = 970.0
offset_bottom = 70.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 4 )
text = "Use the sawblade to cut your esctoplasm on it and become mortal again"
align = 1
valign = 1

[node name="DescLabel" type="Label" parent="SubViewport/VBoxContainer"]
offset_top = 74.0
offset_right = 970.0
offset_bottom = 105.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 0.0588235, 1, 0, 1 )
theme_override_fonts/font = SubResource( 5 )
text = "You will reincarnate with the flesh and blood of a role"
align = 1
valign = 1

[node name="Sprite3DText" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
layers = 4
offset = Vector2( 0, 100 )
pixel_size = 0.007
billboard = 1
texture = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
